<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/navigation_chatbot"
            android:icon="@drawable/ic_chatboot"
            android:title="@string/menu_chatbot" />
        <item
            android:id="@+id/navigation_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile" />
    </group>

    <!-- Elemento de Salir al final -->
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_logout"
        android:title="Salir" />

</menu> 