<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tecsup.aquanqa.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_anuncios"
        android:name="com.tecsup.aquanqa.ui.anuncios.AnunciosFragment"
        android:label="@string/title_anuncios"
        tools:layout="@layout/fragment_anuncios" />

    <fragment
        android:id="@+id/navigation_lunch"
        android:name="com.tecsup.aquanqa.ui.lunch.LunchFragment"
        android:label="@string/title_lunch"
        tools:layout="@layout/fragment_lunch" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.tecsup.aquanqa.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_editProfileFragment"
            app:destination="@id/editProfileFragment" />
    </fragment>
    
    <fragment
        android:id="@+id/editProfileFragment"
        android:name="com.tecsup.aquanqa.ui.profile.EditProfileFragment"
        android:label="Editar Perfil"
        tools:layout="@layout/fragment_edit_profile" />

    <fragment
        android:id="@+id/navigation_chatbot"
        android:name="com.tecsup.aquanqa.ui.chatbot.ChatbotFragment"
        android:label="@string/menu_chatbot"
        tools:layout="@layout/fragment_chatbot" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.tecsup.aquanqa.ui.notifications.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" >
        <action
            android:id="@+id/action_notifications_to_eventDetailFragment"
            app:destination="@id/eventDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/eventDetailFragment"
        android:name="com.tecsup.aquanqa.ui.event.EventDetailFragment"
        android:label="Detalle del Evento"
        tools:layout="@layout/fragment_event_detail">
        <argument
            android:name="eventoId"
            app:argType="integer" />
    </fragment>
</navigation>